<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.tower</groupId>
    <artifactId>mc_tower</artifactId>
    <version>1.0</version>

    <name>Tower</name>
    <description>A simple tower mini-game on minecraft 1.20.x</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>ch.tower.Main</mainClass>
    </properties>

    <repositories>
        <repository>
            <id>dev-mc</id>
            <url>https://mvn.luca-dc.ch/repository/dev-mc/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot 1.20.4 jar -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- My own spigot api for 1.20.x -->
        <dependency>
            <groupId>ch.luca008</groupId>
            <artifactId>SpigotApi</artifactId>
            <version>2.1.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <outputDirectory>C:\Users\lucad\Desktop\Servers\2_Tower\plugins</outputDirectory>
                    <finalName>Tower-${project.version}</finalName>
                </configuration>
            </plugin>
        </plugins>
        <sourceDirectory>src/main/java</sourceDirectory>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <!-- Configuration pour le plugin.yml avec filtrage activé -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
            <!-- Configuration pour tous les fichiers dans le dossier config sans filtrage -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>config/*</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>